--- a/prototype.html
+++ b/prototype.html
@@ -33,10 +33,7 @@
 
     <div class="secondary-nav">
       <figure class="logo red-logo active-logo">
-        <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
-      </figure>
-      <figure class="logo white-logo">
-        <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+        <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="Rayfinn logo"></a>
       </figure>
 
       <div class="navbar-toggle">
