--- a/user-interface.html
+++ b/user-interface.html
@@ -32,12 +32,8 @@
 
     <div class="secondary-nav">
       <figure class="logo red-logo active-logo">
-        <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
+        <a href="./#home"><img src="img/salmon-logo.svg" alt="Rayfinn logo"></a>
       </figure>
-      <figure class="logo white-logo">
-        <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
-      </figure>
-
       <div class="navbar-toggle">
         <div class="hamburger-container">
           <div class="menu-bar"></div>
