--- a/graphic-design.html
+++ b/graphic-design.html
@@ -141,7 +141,7 @@
     <div class="main-footer flex is-column">
       <div class="details">
         <figure>
-        <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+        <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn logo"></a>
         </figure>
         <p>Get in touch</p>
         <p>Rath Prak</p>
