--- a/prototype.html
+++ b/prototype.html
@@ -242,7 +242,7 @@
       <div class="main-footer flex is-column">
         <div class="details">
           <figure>
-          <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
+          <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn logo"></a>
           </figure>
           <p>Get in touch</p>
           <p>Rath Prak</p>
