--- a/user-interface.html
+++ b/user-interface.html
@@ -32,7 +32,7 @@
 
     <div class="secondary-nav">
       <figure class="logo red-logo active-logo">
-        <a href="./#home"><img src="img/salmon-logo.svg" alt="Rayfinn logo"></a>
+        <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="Rayfinn logo"></a>
       </figure>
       <div class="navbar-toggle">
         <div class="hamburger-container">
@@ -160,7 +160,7 @@
       <div class="main-footer flex is-column">
         <div class="details">
           <figure>
-          <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+          <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn logo"></a>
           </figure>
           <p>Get in touch</p>
           <p>Rath Prak</p>
