work on index.html

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       <div class="rendererView"></div>
       <div class="container center-content">
         <div class="landing-header">
-          <h1>Big, tailor-made ideas.</h1>
-          <h3>Kingsize — Creative Agency.</h3>
+          <h1><span>excited</span> desperate to build whatever comes next!</h1>
+          <h3>Designer — Developer.</h3>
         </div>
         <div id="salmon-fish">
           <img src="img/salmon-split.png">
@@ -128,9 +128,9 @@
     <div class="section about-me flex justify-center">
        <div class="wrapper-container flex is-column justify-center">
           <div class="about">
-            <h1 class="fadetext-about">Interested in collaborating?</h1>
-            <h2 class="fadetext-about">“Keeping up with trends in technology improves product design and how we prototype them”</h2>
-            <p class="fadetext-about">Like the design you see, but not seeing the pages or features you need for your site in our example? No problem, you can add any of Squarespace's core features to any of our templates.</p>
+            <h1 class="fadetext-about">A few things about myself</h1>
+            <h2 class="fadetext-about">Driven by curiosity and self-doubt, I'm a designer and <br>front-end developer based in New Zealand.</h2>
+            <p class="fadetext-about">I use design and technology to create things people say like. I’m interested in UI/UX, <br>web technologies and mobile apps, photography and films. I understand that the best results come from collaboration and experimentation.</p>
           </div>
         </div>
 
@@ -156,11 +156,9 @@
       <div class="prototype-container flex justify-center is-row">
         <div class="wrapper-container flex justify-center align-center is-row">
           <article>
-            <h3 class="fadetext-prototype">prototyping + design</h3>
-            <p class="quote-text fadetext-prototype">“Even the darkest moments in our history can get got”
-            </p>
-            <p class="fadetext-prototype">I believe prototyping and design are going to become more and more related in the future. Showing is always better than telling and high-fidelity prototypes with interactivity requires little description. And instant feedback</p>
-            <a href="prototype.html"><button class="btn fadetext-prototype">view case study</button></a>
+            <h1 class="fadetext-prototype">prototyping</h1>
+            <p class="fadetext-prototype">Prototyping is one if the most important elements of User Experience design and something I am very interested in. This case study was based on a project I worked on in 2014 and re-worked as a personal project in 2016 using different tools and techniques.</p>
+            <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
       </div>
@@ -170,27 +168,32 @@
       <div class="ui-container flex justify-center is-row">
         <div class="wrapper-container flex justify-center align-center is-row">
           <article>
-            <h3 class="fadetext-ui">User Interface</h3>
-            <p class="quote-text fadetext-ui">“Talk about how important micro-interactions are to UX design”
-            </p>
-            <p class="fadetext-ui">Can talk about prototyping and adding/enhanceing use experience with microinteractions</p>
-            <a href="user-interface.html"><button class="btn fadetext-ui">view case study</button></a>
+            <h1 class="fadetext-ui">User Interface</h1>
+            <p class="fadetext-ui">The following UI case study is based on a group project I worked on during my time at Enspiral Dev Academy in 2016. I have experience producing designs in photoshop, sketch, HTML and CSS.</p>
+            <a href="user-interface.html"><button class="main-btn-reverse fadetext-ui">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
       </div> 
     </div> <!-- .section interaction --> 
    
-    <div class="section photography">
-      <div class="center-content">
-        <h1>photography content and design</h1>
-      </div>
-    </div>
-
-    <div class="section contact">
-      <div class="center-content">
-        <h1>This is where the contact section will go</h1>
-      </div>
+    <div class="section graphic-design">
+      <section class="center-content">
+        <article>
+          <h1>photography content and design</h1>
+        </article>  
+      </section>
     </div>  
+
+    <div class="section resume flex">
+      <section class="flex-container align-center justify-center is-column">
+        <article>
+          <h1>Resume</h1>
+          <p>I have been a graphic designer and photographer with over 6 years experience working on a wide range of different projects. I know all about deadlines and how to create solutions.</p>
+          <p>I have a passion and interest for all things creative and technology. In 2016, I finished a 21-week intensive web development course where I didn't just learn about web development but also about empathy and people.</p>
+        </article> 
+        <button class="main-btn-reverse">Download resume</button> 
+      </section>
+    </div> 
 
   </main> <!-- end of main section -->
 
