--- a/prototype.html
+++ b/prototype.html
@@ -21,14 +21,13 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
-  <!-- <div id="transition-container"></div> -->
-<!--   <div class="spinner-wrapper">
+  <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
   </div>
- -->
+
   <div class="main-header">
 
     <div class="secondary-nav">
@@ -229,7 +228,7 @@
         <article class="interactive-prototype-text col-two-thirds">
           <h1>Experimenting with Interactive prototyping tools</h1>
           <h2>“Keeping up with trends in technology improves product design and how we prototype them”</h2>
-          <p>To better communicate the app’s interactions, transitions, and user flows to potential stakeholders, I experimented with different prototyping tools such as <span>Auxure, Atomic, and Framer.</span> All had their pros and cons. I found Framer very powerful because it was based on javascript (Coffeescript) and you could have a lot of control but you needed to invest a little time in learning. Talk about Auxure and Atomic.</p>
+          <p>To better communicate the app’s interactions, transitions, and user flows to potential stakeholders, I experimented with different prototyping tools such as <span>Auxure, UXpin, Atomic, and Framer.</span> All had their pros and cons. I found Framer very powerful because it was based on javascript (Coffeescript) and you could have a lot of control but you needed to invest a little time in learning. Talk about Auxure and Atomic.</p>
           <a href="prototype.html"><button class="btn">test prototype</button></a>
         </article>
         <aside class="interactive-prototype-iphone">
