--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="nav-back-button">
-        <p>back</p>
+        <img src="img/close-icon.svg">
       </div>
 
     </div> <!-- .menu-container -->
@@ -161,6 +161,17 @@
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
+      </div>
+      <div class="pulse">
+        <a href="#prototype">
+          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="8"></circle>
+            </g>
+          </svg>
+        </a>
       </div>
     </div> <!-- .section user-interface -->
 
