--- a/user-interface.html
+++ b/user-interface.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="nav-back-button">
-          <p>back</p>
+          <img src="img/close-icon.svg">
         </div>
 
       </div> <!-- .menu-container -->
