--- a/prototype.html
+++ b/prototype.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="nav-back-button">
-          <p>back</p>
+          <img src="img/close-icon.svg">
         </div>
 
       </div> <!-- .menu-container -->
