change copy for about section on landing page

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="about">
             <h1 class="fadetext-about">A few things about myself</h1>
             <h2 class="fadetext-about">Driven by curiosity and self-doubt, I'm a designer and <br>front-end developer based in New Zealand.</h2>
-            <p class="fadetext-about">I use design and technology to create things people say like. I’m interested in UI/UX, <br>web technologies and mobile apps, photography and films. I understand that the best results come from collaboration and experimentation.</p>
+            <p class="fadetext-about">I use design and technology to create things that are meaningful and creative. I’m interested in UI/UX, web technologies and mobile apps, photography and films. I understand that the best results come from collaboration and experimentation.</p>
           </div>
         </div>
 
