--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     </div>
   </div>
 
+<!--   <div class="load">
+   <div class="dot"></div>
+   <div class="outline"><span></span></div>
+</div -->
+
+
+
   <div class="main-header">
 
     <figure class="logo red-logo active-logo">
@@ -157,7 +164,7 @@
         <div class="wrapper-container flex justify-center align-center is-row">
           <article>
             <h1 class="fadetext-prototype">prototyping</h1>
-            <p class="fadetext-prototype">Prototyping is one if the most important elements of User Experience design and something I am very interested in. This case study was based on a project I worked on in 2014 and re-worked as a personal project in 2016 using different tools and techniques.</p>
+            <p class="fadetext-prototype">This case study was based on a project I worked on in 2014 and re-worked as a personal project in 2016 using different tools and techniques.</p>
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
@@ -193,18 +200,7 @@
           <h1>photography content and design</h1>
         </article>  
       </section>
-    </div>  
-
-    <div class="section resume flex">
-      <section class="flex-container align-center justify-center is-column">
-        <article>
-          <h1>Resume</h1>
-          <p>I have been a graphic designer and photographer with over 6 years experience working on a wide range of different projects. I know all about deadlines and how to create solutions.</p>
-          <p>I have a passion and interest for all things creative and technology. In 2016, I finished a 21-week intensive web development course where I didn't just learn about web development but also about empathy and people.</p>
-        </article> 
-        <button class="main-btn-reverse">Download resume</button> 
-      </section>
-    </div> 
+    </div>   
 
   </main> <!-- end of main section -->
 
