--- a/prototype.html
+++ b/prototype.html
@@ -53,7 +53,6 @@
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
             <li data-menuanchor="design" class="menu-item"><a href="graphic-design.html">design</a></li>
-            <li data-menuanchor="contact" class="menu-item"><a href="./#contact">contact</a></li>
           </ul>
 
           <div class="social-main-nav menu-item">
@@ -257,7 +256,7 @@
           <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         </div>
         <div>
-          <a class='backtop-btn'><i class="fa fa-long-arrow-up" aria-hidden="true"></i></a>
+          <a class='backtop-btn'><img src="img/arrow-circle.svg"></i></a>
           <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
         </div>
       </div>
@@ -267,8 +266,6 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
-  <script src="js/vendor/scrolloverflow.js"></script>
-<!-- -->  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="js/dist/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
