update copy for about section on landing page

--- a/user-interface.html
+++ b/user-interface.html
@@ -175,7 +175,7 @@
           <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         </div>
         <div>
-          <a class='backtop-btn'><i class="fa fa-long-arrow-up" aria-hidden="true"></i></a>
+          <a class='backtop-btn'><img src="img/arrow-circle.svg"></i></a>
           <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
         </div>
       </div>
