fix margins prototype.html

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
             <p class="fadetext-prototype">This case study was based on a project I worked on in 2014 and re-worked as a personal project in 2016 using different tools and techniques.</p>
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
+          <div class="prototype-test">
+            <img id="proto-test" src="img/prototype-test.jpg" alt="">
+          </div>
         </div>
       </div>
       <div class="pulse">
