change black font

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
           <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
           <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
           <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
-          <li data-menuanchor="contact" class="menu-item"><a href="#contact">contact</a></li>
         </ul>
 
         <div class="social-main-nav menu-item">
@@ -161,10 +160,11 @@
         <img src="img/prototype_icon.svg" alt="prototype and design initial">
       </div>
       <div class="prototype-container flex justify-center is-row">
-        <div class="wrapper-container flex justify-center align-center is-row">
-          <article>
+        <div class="wrapper-container flex justify-center align-center is-row space-between">
+          <article class="col-two">
             <h1 class="fadetext-prototype">prototyping</h1>
             <p class="fadetext-prototype">This case study was based on a project I worked on in 2014 and re-worked as a personal project in 2016 using different tools and techniques.</p>
+            <!-- <a href="prototype.html" class="btn-2">View Case Study</a> -->
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-test">
