--- a/prototype.html
+++ b/prototype.html
@@ -184,7 +184,7 @@
     <section class="mockup flex is-column">
       <div class="mockup-container flex-container align-center space-between is-column">
         <article class="mockup-text">
-          <h1>Hi-fidelity mockups</h1>
+          <h1>High fidelity mockups</h1>
           <p>Combining Sketch App and Photoshop, the wireframes were then transformed into hi-fidelity mockups which included color, typography, graphics and other visual elements. Utilising Sketch’s artboard feature, I rapidly <span>iterated and experimented </span> with different design variations and layouts.</p>
         </article>
         <div class="sketch-screenshot">
