--- a/graphic-design.html
+++ b/graphic-design.html
@@ -52,6 +52,7 @@
             <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
+            <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
           </ul>
 
           <div class="social-main-nav menu-item">
