complete adding content to index.html

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -94,7 +94,7 @@
     </div> 
   </section> <!-- .prototype-intro-wrapper -->
 
-  <section class="design-intro flex">
+<!--   <section class="design-intro flex">
     <div class="design-intro-container flex-container align-center justify-center is-column">
       <article class="intro-text">
         <h1>Introduction</h1>
@@ -104,7 +104,7 @@
         <p>Every team member was involved with product development and planning. <span>My Role was to design the user interface and front end development. Based on the produced wireframes I implemented the visual elements and layouts.</span></p>
       </article>
     </div>
-  </section> <!-- design-intro -->
+  </section> --> 
 
   <section class="design-portfolio-items flex">
     <div class="flex-container align-center justify-center is-column">
