--- a/index.html
+++ b/index.html
@@ -159,21 +159,21 @@
       <div class="p-background-icon">
         <img src="img/prototype_icon.svg" alt="prototype and design initial">
       </div>
-      <div class="prototype-container flex justify-center is-row">
-        <div class="wrapper-container flex justify-center align-center is-row space-between">
-          <article class="col-two">
+      <div class="prototype-container flex justify-center">
+        <div class="wrapper-container flex justify-center align-center space-between">
+          <article>
             <h1 class="fadetext-prototype">prototyping</h1>
-            <p class="fadetext-prototype">This case study was based on a project I worked on in 2014 and re-worked as a personal project in 2016 using different tools and techniques.</p>
+            <p class="fadetext-prototype">This case study was based on a project I worked on in 2014 and reworked as a personal project in 2016 using different tools and techniques.</p>
             <!-- <a href="prototype.html" class="btn-2">View Case Study</a> -->
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
-          <div class="prototype-test">
-            <img id="proto-test" src="img/prototype-test.jpg" alt="">
+          <div class="prototype-mockup fadetext-prototype">
+            <img id="proto-test" src="img/prototype-test.png" alt="">
           </div>
         </div>
       </div>
       <div class="pulse">
-        <a href="#prototype">
+        <a href="#user-interface">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
             <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
@@ -186,24 +186,42 @@
     </div> <!-- .section user-interface -->
 
     <div class="section ui">
-      <div class="ui-container flex justify-center is-row">
-        <div class="wrapper-container flex justify-center align-center is-row">
+      <div class="ui-container flex justify-center">
+        <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-ui">User Interface</h1>
             <p class="fadetext-ui">The following UI case study is based on a group project I worked on during my time at Enspiral Dev Academy in 2016. I have experience producing designs in photoshop, sketch, HTML and CSS.</p>
             <a href="user-interface.html"><button class="main-btn-reverse fadetext-ui">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
+          <div class="ui-mockup fadetext-ui">
+            <img id="proto-test" src="img/ui-desktop.png" alt="wireframe of laptop">
+          </div>
         </div>
+      </div>
+      <div class="pulse">
+        <a href="#design">
+          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="8"></circle>
+            </g>
+          </svg>
+        </a>
       </div> 
     </div> <!-- .section interaction --> 
-   
+
     <div class="section graphic-design">
-      <section class="center-content">
-        <article>
-          <h1>photography content and design</h1>
-        </article>  
-      </section>
-    </div>   
+      <div class="design-container flex justify-center">
+        <div class="wrapper-container flex justify-center align-center space-between">
+          <article>
+            <h1 class="fadetext-design">Design and Photography</h1>
+            <p class="fadetext-design">Graphic designer and photographer with 6+ years of experience developing, designing and producing a variety of print and digital collateral including marketing material, branding, annual reports, user interface, E-newsletters, and posters.</p>
+            <a href="graphic-design.html"><button class="main-btn-reverse fadetext-design">View Portfolio<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
+          </article>
+        </div>
+      </div> 
+    </div> <!-- .section interaction -->   
 
   </main> <!-- end of main section -->
 
