clean image folder, fix fish

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
-  <!-- <div id="transition-container"></div> -->
   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
@@ -29,23 +28,14 @@
     </div>
   </div>
 
-<!--   <div class="load">
-   <div class="dot"></div>
-   <div class="outline"><span></span></div>
-</div -->
-
-
-
   <div class="main-header">
 
     <figure class="logo red-logo active-logo">
-      <a href="#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn logo"></a>
+      <a href="#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn red logo"></a>
     </figure>
     <figure class="logo white-logo">
       <a href="#home"><img src="img/rayfinn-logo.svg" alt="rayfinn white logo"></a>
     </figure>
-
-
 
     <div class="navbar-toggle">
       <div class="hamburger-container">
@@ -108,12 +98,11 @@
       <div class="rendererView"></div>
       <div class="container center-content">
         <div class="landing-header">
-          <h1><span>excited</span> desperate to build whatever comes next!</h1>
+          <h1>Excited to build whatever comes next!</h1>
           <h3>Designer — Developer.</h3>
         </div>
         <div id="salmon-fish">
           <img src="img/salmon-split.png">
-          <img id="salmon-fin" src="img/finn.png">
         </div>       
       </div>
 
@@ -186,6 +175,9 @@
     </div> <!-- .section user-interface -->
 
     <div class="section ui">
+      <div class="ui-background-icon">
+        <img src="img/ui_icon.svg" alt="prototype and design initial">
+      </div>
       <div class="ui-container flex justify-center">
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
@@ -212,6 +204,9 @@
     </div> <!-- .section interaction --> 
 
     <div class="section graphic-design">
+      <div class="design-background-icon">
+        <img src="img/design_icon.svg" alt="prototype and design initial">
+      </div>
       <div class="design-container flex justify-center">
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
