--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-ui">User Interface</h1>
-            <p class="fadetext-ui">The following UI case study is based on a group project I worked on during my time at Enspiral Dev Academy in 2016. I have experience producing designs in photoshop, sketch, HTML and CSS.</p>
+            <p class="fadetext-ui">The following UI case study is based on a group project I worked on during my time at Enspiral Dev Academy in 2016. Each group had 6 days to complete and present the project.</p>
             <a href="user-interface.html"><button class="main-btn-reverse fadetext-ui">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="ui-mockup fadetext-ui">
@@ -210,7 +210,7 @@
       <div class="design-container flex justify-center">
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
-            <h1 class="fadetext-design">Design and Photography</h1>
+            <h1 class="fadetext-design">Graphic Design</h1>
             <p class="fadetext-design">Graphic designer and photographer with 6+ years of experience developing, designing and producing a variety of print and digital collateral including marketing material, branding, annual reports, user interface, E-newsletters, and posters.</p>
             <a href="graphic-design.html"><button class="main-btn-reverse fadetext-design">View Portfolio<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
