clean img folder, add content to graphic-design.htl

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -87,8 +87,8 @@
       <article class="intro-text flex is-column justify-center">
         <h1>Graphic Design</h1>
         <h2>Welcome to my graphic design portfolio</h2>
-        <p class="ui-body-text">
-        Tadem is a ridesharing app connects drivers and passengers willing to travel together between cities and share the cost of the journey.
+        <p class="design-body-text">
+        I am passionate about all things design. I love combining typography, photography, and color to communicate ideas and stimulate feelings. I also have an interest in portrait photography and have experience with studio and product photography. Online portfolio <a href="http://www.capturegram.co.nz">www.capturegram.co.nz</a>
         </p>
       </article>  
     </div> 
@@ -99,25 +99,30 @@
       <article class="portfolio-wrap">
         <div class="col-2"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
         <div class="col-2"><img src="img/graphic-design/portfolio-nztb02.png" alt="graphic design annual report"></div>
-        <div class="col-1"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
-        <p class="caption" >Annaul Report / design and layout</p>
+        <p class="caption" >(Annaul Report / design and layout)</p>
       </article>
 
       <article class="portfolio-wrap">
+        <div class="col-1"><img src="img/graphic-design/portfolio-nix00.jpg" alt="Phoenix poster"></div>
         <div class="col-1"><img src="img/graphic-design/portfolio-nix01.png" alt="Phoenix Brochure"></div>
         <div class="col-1"><img src="img/graphic-design/portfolio-nix02.png" alt="Phoenix Brochure"></div>
-        <p class="caption">Wellington Phoenix pre-season campaign. I was involved with concepts photography, branding and billboads and many more.</p>
+        <p class="caption">(Wellington Phoenix / photography, retouching, design, branding and marketing material)</p>
       </article>
 
       <article class="portfolio-wrap">
         <div class="col-1"><img src="img/graphic-design/portfolio-promocard.png" alt="Phoenix Brochure"></div>
-        <p class="caption">Capturegram promoition card, design and photography</p>
+        <p class="caption">(Capturegram promotion card, design and photography)</p>
+      </article>
+
+      <article class="portfolio-wrap">
+        <div class="col-1"><img src="img/graphic-design/portfolio-outsource.jpg" alt="Phoenix Brochure"></div>
+        <p class="caption">(Outsource Accounts, branding)</p>
       </article>
 
       <article class="portfolio-wrap">
         <div class="col-2"><img src="img/graphic-design/portfolio-logo01.png" alt="branding/logo"></div>
         <div class="col-2"><img src="img/graphic-design/portfolio-logo02.png" alt="branding/logo"></div>
-        <p class="caption">Capturegram promoition card, design and photography</p>
+        <p class="caption">(Branding/logo concepts)</p>
       </article>
     </div>
   </section> <!-- tandem intro -->
