--- a/prototype.html
+++ b/prototype.html
@@ -127,16 +127,16 @@
         </article>
         <article class="client-sketches flex is-row space-between">
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-1.jpg" alt="Bird Nerd client sketches">
+            <img src="./img/assets/bird-nerd-1.jpg" alt="Bird Nerd client sketches">
           </div>
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-2.jpg" alt="Bird Nerd client sketches">
+            <img src="./img/assets/bird-nerd-2.jpg" alt="Bird Nerd client sketches">
           </div>
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-3.jpg" alt="Bird Nerd client sketches">
+            <img src="./img/assets/bird-nerd-3.jpg" alt="Bird Nerd client sketches">
           </div>
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-4.jpg" alt="Bird Nerd client sketches">
+            <img src="./img/assets/bird-nerd-4.jpg" alt="Bird Nerd client sketches">
           </div>
         </article>
           <h5>(Early sketches provided by team from ALP)</h5> 
@@ -163,16 +163,16 @@
           </article>
           <article class="wireframe-sketches flex is-row space-between">
             <div>
-              <img src="img/assets/wireframe/landing.png" alt="fill this out">
+              <img src="./img/assets/wireframe/landing.png" alt="fill this out">
             </div>
             <div>
-              <img src="img/assets/wireframe/welcome.png" alt="fill this out">
+              <img src="./img/assets/wireframe/welcome.png" alt="fill this out">
             </div>
             <div>
-              <img src="img/assets/wireframe/signin.png" alt="fill this out">
+              <img src="./img/assets/wireframe/signin.png" alt="fill this out">
             </div>
             <div>
-             <img src="img/assets/wireframe/signup.png" alt="fill this out">
+             <img src="./img/assets/wireframe/signup.png" alt="fill this out">
             </div>
           </article>
           <h5>(Wireframes produced with Sketch App)</h5> 
@@ -202,16 +202,16 @@
         </article>
         <article class="final-prototype-screens flex space-between">
           <div>
-          <img src="img/loading-iphone.png" alt="fill this out">
+          <img src="./img/loading-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="img/welcome-iphone.png" alt="fill this out">
+          <img src="./img/welcome-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="img/signin-iphone.png" alt="fill this out">
+          <img src="./img/signin-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="img/signup-iphone.png" alt="fill this out">
+          <img src="./img/signup-iphone.png" alt="fill this out">
           </div>
         </article>
         <h5>(Mockups of landing, sign-in and registration pages)</h5> 
@@ -231,7 +231,7 @@
           <a href="prototype.html"><button class="btn">test prototype</button></a>
         </article>
         <aside class="interactive-prototype-iphone">
-          <img src="img/loading-iphone-large.png" alt="Framer mockup iphone">
+          <img src="./img/loading-iphone-large.png" alt="Framer mockup iphone">
         </aside>
       </div>    
     </section> <!-- .interactive-prototyping -->
