change main.js add hide navigation when scrolling down

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -88,7 +88,7 @@
         <h1>Graphic Design</h1>
         <h2>Welcome to my graphic design portfolio</h2>
         <p class="design-body-text">
-        I am passionate about all things design. I love combining typography, photography, and color to communicate ideas and stimulate feelings. I also have an interest in portrait photography and have experience with studio and product photography. Online portfolio <a href="http://www.capturegram.co.nz">www.capturegram.co.nz</a>
+        I am passionate about all things design. I love combining typography, photography, and color to communicate ideas and stimulate feelings. I also have an interest in portrait photography and have experience with studio and product photography. Online portfolio <a target="_blank" href="http://www.capturegram.co.nz">www.capturegram.co.nz</a>
         </p>
       </article>  
     </div> 
