--- a/prototype.html
+++ b/prototype.html
@@ -86,8 +86,8 @@
       </div>
       <div class="prototype-case-study flex-container is-column-reverse space-between">
         <article class="intro-text flex is-column justify-center">
-          <h1>Prototyping</h1>
-          <h2>Personal project / Bird Nerd</h2>
+          <h1>Bird Nerd</h1>
+          <h2>Personal project / Prototyping</h2>
           <p class="prototype-body-text">
             Bird Nerd is a mobile app that records and automatically identify bird songs or calls in the field. Users can also upload, tag and share bird sightings into a database.  
           </p>
@@ -107,7 +107,7 @@
           <h1>Introduction</h1>
           <p class="intro-para">Bird Nerd provides a dynamic and fun learning experience that will help increase knowledge and awareness of bird conservation in New Zealand.</p>
 
-          <p>In 2014 friends working across the natural resources sector approached me to help come up with visual designs for an app concept they were pitching as part of the <a a target="_blank" href="http://www.aspiringleaders.org.nz">Aspiring Leadership Programme</a> (ALP), an annual event that brings together a diverse group of committed and courageous young leaders from across Aotearoa New Zealand.</p>
+          <p>In 2014 friends working across the natural resources sector approached me to help come up with visual designs for an app concept they were pitching as part of the <a target="_blank" href="http://www.aspiringleaders.org.nz">Aspiring Leadership Programme</a> (ALP), an annual event that brings together a diverse group of committed and courageous young leaders from across Aotearoa New Zealand.</p>
 
           <p>Our initial plan was to produce a series of simple wireframes that the team could present, we later felt that wireframes alone were not enough to communicate what the team wanted to build and decided to develop a <span>high fidelity prototype</span> instead which included UI components and interactivity.</p>
         </article>
@@ -152,13 +152,13 @@
           <p class="intro-para">For this case study, I decided to focus on developing one user story — registration and login.</p>
 
           <p>Wireframing was essential in making sure the prototype started in the right direction. Base on the content provided by the team from ALP, I brainstormed and created sketches using pen and paper. These sketches were done quickly and gave me a good idea of what functionality and content were required for the prototype.</p>
-          <img src="img/wireframe-sketches.jpg" alt="fill this out">
+          <img src="./img/wireframe-sketches.jpg" alt="fill this out">
           <h5>(Wireframes produced with pen and paper, I spent approximately an hour on these sketches)</h5>
         </article>
         
         <div class="sketch-wireframes flex is-column">
           <article>
-            <h2>Hi-fidelity wireframes with Sketch App</h2>
+            <h2>High fidelity wireframes with Sketch App</h2>
             <p>I then converted the sketches into digital wireframes using Sketch App. Using Sketch UI kits, I was able to quickly produce vector based wireframes with familiar UI features like keypads and status bars which I could easily share and receive feedback.</p>
           </article>
           <article class="wireframe-sketches flex is-row space-between">
@@ -228,7 +228,6 @@
           <h1>Experimenting with Interactive prototyping tools</h1>
           <h2>“Keeping up with trends in technology improves product design and how we prototype them”</h2>
           <p>To better communicate the app’s interactions, transitions, and user flows to potential stakeholders, I experimented with different prototyping tools such as <span>Auxure, UXpin, Atomic, bootstrapstudio, and Framer.</span> All had their pros and cons. I found Framer very powerful because it was based on javascript (Coffeescript) and you could have a lot of control but you needed to invest a little time in learning. Talk about Auxure and Atomic.</p>
-          <a href="prototype.html"><button class="btn">test prototype</button></a>
         </article>
         <aside class="interactive-prototype-iphone">
           <img src="./img/loading-iphone-large.png" alt="Framer mockup iphone">
