fix image links prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -160,16 +160,16 @@
           </article>
           <article class="wireframe-sketches flex is-row space-between">
             <div>
-              <img src="./img/assets/wireframe/welcome.png" alt="fill this out">
+              <img src="./img/assets/landing01.png" alt="wireframe landing screen">
             </div>
             <div>
-              <img src="./img/assets/wireframe/welcome.png" alt="fill this out">
+              <img src="./img/assets/welcome.png" alt="wireframe welcome screen">
             </div>
             <div>
-              <img src="./img/assets/wireframe/signin.png" alt="fill this out">
+              <img src="./img/assets/signin.png" alt="wireframe signin screen">
             </div>
             <div>
-             <img src="./img/assets/wireframe/signup.png" alt="fill this out">
+             <img src="./img/assets/signup.png" alt="wireframe signup screen">
             </div>
           </article>
           <h5>(Wireframes produced with Sketch App)</h5> 
