fix link protoype.html

--- a/prototype.html
+++ b/prototype.html
@@ -160,7 +160,7 @@
           </article>
           <article class="wireframe-sketches flex is-row space-between">
             <div>
-              <img src="./img/assets/landing01.png" alt="wireframe landing screen">
+              <img src="./img/assets/landing.png" alt="wireframe landing screen">
             </div>
             <div>
               <img src="./img/assets/welcome.png" alt="wireframe welcome screen">
