--- a/prototype.html
+++ b/prototype.html
@@ -166,10 +166,10 @@
               <img src="./img/assets/welcome.png" alt="wireframe welcome screen">
             </div>
             <div>
-              <img src="./img/assets/signin.png" alt="wireframe signin screen">
+              <img src="./img/assets/welcome.png" alt="wireframe signin screen">
             </div>
             <div>
-             <img src="./img/assets/signup.png" alt="wireframe signup screen">
+             <img src="./img/assets/welcome.png" alt="wireframe signup screen">
             </div>
           </article>
           <h5>(Wireframes produced with Sketch App)</h5> 
