trying to fix links

--- a/prototype.html
+++ b/prototype.html
@@ -166,10 +166,10 @@
               <img src="./img/assets/welcome.png" alt="wireframe welcome screen">
             </div>
             <div>
-              <img src="./img/assets/welcome.png" alt="wireframe signin screen">
+              <img src="./img/assets/signin.png" alt="wireframe signin screen">
             </div>
             <div>
-             <img src="./img/assets/welcome.png" alt="wireframe signup screen">
+             <img src="./img/assets/signup.png" alt="wireframe signup screen">
             </div>
           </article>
           <h5>(Wireframes produced with Sketch App)</h5> 
@@ -205,10 +205,10 @@
           <img src="./img/welcome-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="./img/signin-iphone.png" alt="fill this out">
+          <img src="./img/welcome-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="./img/signup-iphone.png" alt="fill this out">
+          <img src="./img/welcome-iphone.png" alt="fill this out">
           </div>
         </article>
         <h5>(Mockups of landing, sign-in and registration pages)</h5> 
