trying to fix links

--- a/prototype.html
+++ b/prototype.html
@@ -199,16 +199,16 @@
         </article>
         <article class="final-prototype-screens flex space-between">
           <div>
-          <img src="./img/loading-iphone.png" alt="fill this out">
+          <img src="img/loading-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="./img/welcome-iphone.png" alt="fill this out">
+          <img src="img/welcome-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="./img/welcome-iphone.png" alt="fill this out">
+          <img src="img/welcome-iphone.png" alt="fill this out">
           </div>
           <div>
-          <img src="./img/welcome-iphone.png" alt="fill this out">
+          <img src="img/welcome-iphone.png" alt="fill this out">
           </div>
         </article>
         <h5>(Mockups of landing, sign-in and registration pages)</h5> 
