fixed image links

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
   <script src="js/vendor/scrolloverflow.js"></script>
-  <script src="js/vendor/pixi.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.0.0/pixi.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
   <script src="js/dist/main.js"></script>
