--- a/prototype.html
+++ b/prototype.html
@@ -160,16 +160,16 @@
           </article>
           <article class="wireframe-sketches flex is-row space-between">
             <div>
-              <img src="./img/assets/wireframe/welcome.png" alt="fill this out">
+              <img src="./img/assets/landing.png" alt="wireframe landing screen">
             </div>
             <div>
-              <img src="./img/assets/wireframe/welcome.png" alt="fill this out">
+              <img src="./img/assets/welcome.png" alt="wireframe welcome screen">
             </div>
             <div>
-              <img src="./img/assets/wireframe/signin.png" alt="fill this out">
+              <img src="./img/assets/signin.png" alt="wireframe signin screen">
             </div>
             <div>
-             <img src="./img/assets/wireframe/signup.png" alt="fill this out">
+             <img src="./img/assets/signup.png" alt="wireframe signup screen">
             </div>
           </article>
           <h5>(Wireframes produced with Sketch App)</h5> 
@@ -199,16 +199,16 @@
         </article>
         <article class="final-prototype-screens flex space-between">
           <div>
-          <img src="./img/loading-iphone.png" alt="fill this out">
+          <img src="img/loading-iphone.png" alt="loading page mockup">
           </div>
           <div>
-          <img src="./img/welcome-iphone.png" alt="fill this out">
+          <img src="img/welcome-iphone.png" alt="welcome mockup">
           </div>
           <div>
-          <img src="./img/signin-iphone.png" alt="fill this out">
+          <img src="img/signIn-iphone.png" alt="signin page mockup">
           </div>
           <div>
-          <img src="./img/signup-iphone.png" alt="fill this out">
+          <img src="img/signUp-iphone.png" alt="signup page mockup">
           </div>
         </article>
         <h5>(Mockups of landing, sign-in and registration pages)</h5> 
