--- a/prototype.html
+++ b/prototype.html
@@ -150,7 +150,7 @@
 
           <p>Wireframing was essential in making sure the prototype started in the right direction. Base on the content provided by the team from ALP, I brainstormed and created sketches using pen and paper. These sketches were done quickly and gave me a good idea of what functionality and content were required for the prototype.</p>
           <img src="./img/wireframe-sketches.jpg" alt="fill this out">
-          <h5>(Wireframes produced with pen and paper, I spent approximately an hour on these sketches)</h5>
+          <h5>(Wireframes produced with pen and paper)</h5>
         </article>
         
         <div class="sketch-wireframes flex is-column">
