--- a/user-interface.html
+++ b/user-interface.html
@@ -85,7 +85,7 @@
     <div class="ui-case-study flex-container is-column-reverse space-between">
       <article class="intro-text flex is-column justify-center">
         <h1>Tandem</h1>
-        <h2>Group project, user interface and front end development</h2>
+        <h2>Group project, user interface design and front end development</h2>
         <p class="ui-body-text">
         Tandem is a ridesharing app that allows drivers and passengers willing to travel together to connect and share the costs of the journey.
         </p>
