update copy for all sections

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -65,8 +65,8 @@
         </div>
 
         <div class="nav-about-text">
-          <h2>My name is Rath Prak, <br>I'm a <span>Digital designer</span> based in Wellington.</h2>
-          <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
+          <h2>I'm a <span>Digital designer</span> and <span>Front end developer</span> based in Wellington.</h2>
+          <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p> 
         </div>
 
         <div class="nav-back-button">
@@ -88,7 +88,7 @@
         <h1>Graphic Design</h1>
         <h2>Welcome to my graphic design portfolio</h2>
         <p class="design-body-text">
-        I am passionate about all things design. I love combining typography, photography, and color to communicate ideas and stimulate feelings. I also have an interest in portrait photography and also have experience with studio and commercial photography. Online portfolio <a target="_blank" href="http://www.capturegram.co.nz">capturegram</a>
+        I am passionate about all things design. I love combining typography, photography, and colors to communicate ideas and stimulate feelings. I also have an interest in portrait and commercial photography. Online photographic portfolio <a target="_blank" href="http://www.capturegram.co.nz">capturegram</a>
         </p>
       </article>  
     </div> 
