--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       </div>
 
       <div class="nav-about-text menu-item">
-        <h2>My name is Rath Prak, <br><span>I'm a Digital designer</span> based in Wellington.</h2>
-        <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
+        <h2>I'm a <span>Digital designer</span> and <span>Front end developer</span> based in Wellington.</h2>
+        <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p> 
       </div>
 
       <div class="nav-back-button">
@@ -125,7 +125,7 @@
           <div class="about">
             <h1 class="fadetext-about">A few things about myself</h1>
             <h2 class="fadetext-about">Driven by curiosity and a little self-doubt, I'm a designer and <br>front-end developer based in New Zealand.</h2>
-            <p class="fadetext-about">I use design and technology to create things that are meaningful and creative. I’m interested in UI/UX, web technologies and mobile apps, photography and films. I understand that the best results come from collaboration and experimentation.</p>
+            <p class="fadetext-about">I use design and technology to create things that are meaningful and creative. I’m interested in design and UI/UX, web technologies and mobile apps, photography and films. I understand that the best results come from collaboration and experimentation.</p>
           </div>
         </div>
 
@@ -152,7 +152,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-prototype">prototyping</h1>
-            <p class="fadetext-prototype">This case study was based on a project I worked on in 2014 and reworked as a personal project in 2016 using different tools and techniques.</p>
+            <p class="fadetext-prototype">This case study is based on a project I worked on in 2014 and reworked 2016 as a personal project and prototyping exercise.</p>
             <!-- <a href="prototype.html" class="btn-2">View Case Study</a> -->
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
@@ -182,7 +182,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-ui">User Interface</h1>
-            <p class="fadetext-ui">The following UI case study is based on a group project I worked on during my time at Enspiral Dev Academy in 2016. Each group had 6 days to complete and present the project.</p>
+            <p class="fadetext-ui">The following UI case study is based on a group project I worked on during my time at Enspiral Dev Academy in 2016. Each group had 6 days to complete and present the finished project.</p>
             <a href="user-interface.html"><button class="main-btn-reverse fadetext-ui">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="ui-mockup fadetext-ui">
