fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         </div>
       </div>
 
-      <div class="nav-about-text menu-item">
-        <h2>I'm a <span>Digital designer</span> and <span>Front end developer</span> based in Wellington.</h2>
-        <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p> 
+      <div class="nav-about-text">
+        <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
+        <p>My interests include interaction design, UX/UI, prototyping and front-end development.</p> 
       </div>
 
       <div class="nav-back-button">
