--- a/user-interface.html
+++ b/user-interface.html
@@ -64,8 +64,8 @@
         </div>
 
         <div class="nav-about-text">
-          <h2>I'm a <span>Digital designer</span> and <span>Front end developer</span> based in Wellington.</h2>
-          <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p> 
+          <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
+          <p>My interests include interaction design, UX/UI, prototyping and front-end development.</p> 
         </div>
 
         <div class="nav-back-button">
